--- a/CSS/task7.html
+++ b/CSS/task7.html
@@ -1,91 +1,74 @@
-<html>
-<style>
-    div.box1{
-        width: 100px;
-        height: 70px;
-        border: 3.5px solid greenyellow;
-        display: inline-block;
-        margin-left: 20px;
-    }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sidenav hover button</title>
+    <style>
+        .side-nav {
+            position:absolute;
+            top:20px;
+            left:0;
+        }
 
-
-    div.box2{
-        width: 100px;
-        height: 70px;
-        border: 3.5px solid greenyellow;
-        display: inline-block;
-        margin-left: 20px;
-    }
-
-    div.box3{
-        width: 100px;
-        height: 70px;
-        border: 3.5px solid greenyellow;
-        display: inline-block;
-        margin-left: 20px;
-    }
-
-    div#b1{
-        border-radius: 10px;
-    }
-
-    div#b2{
-        border-radius: 15px;
-    }
-
-    div#b3{
-        border-radius: 25px;
-    }
-
-    div#b4{
-        border-radius: 15px;
-    }
-
-    div#b5{
-        border-radius: 10px;
-    }
-
-    div#b6{
-        border-radius: 25px;
-    }
-
-    div#b7{
-        width: 100px;
-        height: 60px;
-        border-radius: 140px;
-    }
-
-
-    div#b8{
-        border-radius: 10px;
-    }
-
-    div#b9{
-        border-top-right-radius: 30px;
-        border-bottom-left-radius: 30px;
-    }
-    
-</style>
-<body style="padding-left: 500px;padding-top: 175px;">
-    
+        .green {
+            width: 100px;
+            background-color:green;
+            height:100px;
+            margin-bottom: 10px;
+            border-radius: 0 10px 10px 0;
+        }
+        .green:hover {
+            width:120px;
+            height:120px;
+            transition:0.5s ease;
+        }
+        .red {
+            width: 100px;
+            background-color:red;
+            height:100px;
+            margin-bottom: 10px;
+            border-radius: 0 10px 10px 0;
+        }
+        .red:hover {
+            width:120px;
+            height:120px;
+            transition:0.5s ease;
+        }
+        .blue {
+            width: 100px;
+            background-color:aqua;
+            height:100px;
+            margin-bottom: 10px;
+            border-radius: 0 10px 10px 0;
+        }
+        .blue:hover {
+            width:120px;
+            height:120px;
+            transition:0.5s ease;
+        }
+        .grey {
+            width: 100px;
+            background-color:darkgrey;
+            height:100px;
+            border-radius: 0 10px 10px 0;
+        }
+        .grey:hover {
+            width:120px;
+            height:120px;
+            transition:0.5s ease;
+        }
+    </style>
+</head>
+<body>
+    <h2 style="margin-left:150px">Hoverable Sidenav Buttons</h2>
+    <p style="margin-left:150px">Hover on the buttons on the left side navigation to open them.</p>
+    <div class="side-nav">
+        <div class="green"></div>
+        <div class="red"></div>
+        <div class="blue"></div>
+        <div class="grey"></div>
+    </div>
 </body>
-<div  id="b1" class="box1 " ></div>
-<div  id="b2" class="box1 " ></div>
-<div  id="b3" class="box1 " ></div>
-
-<br>
-<br>
-<br>
-<div  id="b4" class="box2 " ></div>
-<div  id="b5" class="box2 " ></div>
-<div  id="b6" class="box2 " ></div>
-
-<br>
-<br>
-<br>
-
-<div  id="b7" class="box3 " ></div>
-<div  id="b8" class="box3 " ></div>
-<div  id="b9" class="box3 "></div>
-
 </html>
