--- a/CSS/task8.html
+++ b/CSS/task8.html
@@ -1,11 +1,91 @@
 <html>
-<div class="container" style="padding-top:200px;padding-left: 600px;">
-<div class="box1" style="border-left: 1px solid rgb(245, 233, 211);
-border-top: 1px solid rgb(245, 233, 211);width: 280px;">
-    <div class="box2" style="margin:10px;border: 3px solid black;width: 250px;height: 150px;">
-    <p  style="background-color: yellow;margin: 40px">This text has a margin of 40 pixels on its all four sides.
-    It is nested within a div with a border to make it easier to see the effect of margin</p>
-    </div>
-</div>
-</div>
+<style>
+    div.box1{
+        width: 100px;
+        height: 70px;
+        border: 3.5px solid greenyellow;
+        display: inline-block;
+        margin-left: 20px;
+    }
+
+
+    div.box2{
+        width: 100px;
+        height: 70px;
+        border: 3.5px solid greenyellow;
+        display: inline-block;
+        margin-left: 20px;
+    }
+
+    div.box3{
+        width: 100px;
+        height: 70px;
+        border: 3.5px solid greenyellow;
+        display: inline-block;
+        margin-left: 20px;
+    }
+
+    div#b1{
+        border-radius: 10px;
+    }
+
+    div#b2{
+        border-radius: 15px;
+    }
+
+    div#b3{
+        border-radius: 25px;
+    }
+
+    div#b4{
+        border-radius: 15px;
+    }
+
+    div#b5{
+        border-radius: 10px;
+    }
+
+    div#b6{
+        border-radius: 25px;
+    }
+
+    div#b7{
+        width: 100px;
+        height: 60px;
+        border-radius: 140px;
+    }
+
+
+    div#b8{
+        border-radius: 10px;
+    }
+
+    div#b9{
+        border-top-right-radius: 30px;
+        border-bottom-left-radius: 30px;
+    }
+    
+</style>
+<body style="padding-left: 500px;padding-top: 175px;">
+    
+</body>
+<div  id="b1" class="box1 " ></div>
+<div  id="b2" class="box1 " ></div>
+<div  id="b3" class="box1 " ></div>
+
+<br>
+<br>
+<br>
+<div  id="b4" class="box2 " ></div>
+<div  id="b5" class="box2 " ></div>
+<div  id="b6" class="box2 " ></div>
+
+<br>
+<br>
+<br>
+
+<div  id="b7" class="box3 " ></div>
+<div  id="b8" class="box3 " ></div>
+<div  id="b9" class="box3 "></div>
+
 </html>
