--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       <li><a href="CSS/task3.html">CSS Task 3</a></li>
       <li><a href="CSS/task4.html">CSS Task 4</a></li>
       <li><a href="CSS/task5.html">CSS Task 5</a></li>
-      <li><a href="CSS/task6A.html">CSS Task 6a</a></li>
-      <li><a href="CSS/task6B.html">CSS Task 6b</a></li>
+      <li><a href="CSS/task6.html">CSS Task 6</a></li>
       <li><a href="CSS/task7.html">CSS Task 7</a></li>
       <li><a href="CSS/task8.html">CSS Task 8</a></li>
       <li><a href="CSS/task9.html">CSS Task 9</a></li>
       <li><a href="CSS/task10.html">CSS Task 10</a></li>
       <li><a href="CSS/task11.html">CSS Task 11</a></li>
+      <li><a href="CSS/task12.html">CSS Task 12</a></li>
       <br />
       <li><a href="Bootstrap/Task1.html">Bootstrap 1</a></li>
       <li><a href="Bootstrap/Task2.html">Bootstrap 2</a></li>
