--- a/CSS/task9.html
+++ b/CSS/task9.html
@@ -1,10 +1,10 @@
 <html>
 <div class="container" style="padding-top:200px;padding-left: 600px;">
-<div class="box1" style="border-left: 1px solid rgb(245, 233, 211);border-top: 1px solid rgb(245, 233, 211);width: 320px;">
-    <div class="box2" style="margin:10px;border: 3px solid black;width: 300px;height: 120px;">
-    <p  style="background-color: yellow;margin: 40px">The outer div has padding 
-        applied.This results in padding between 
-        between the edge of the outer div and the edge of the inner div.</p>
+<div class="box1" style="border-left: 1px solid rgb(245, 233, 211);
+border-top: 1px solid rgb(245, 233, 211);width: 280px;">
+    <div class="box2" style="margin:10px;border: 3px solid black;width: 250px;height: 150px;">
+    <p  style="background-color: yellow;margin: 40px">This text has a margin of 40 pixels on its all four sides.
+    It is nested within a div with a border to make it easier to see the effect of margin</p>
     </div>
 </div>
 </div>
